# wayland_compositor

./: LICENSE  README.md  config.default  makefile  meson.build
config/: config
docs/: README.en.md  README.ru.md
src/: compositor.h  config.c  config.h  cursor.c  cursor.h  edges.h  input.c  input.h  keyboard.c  keyboard.h  layer_shell.c  layer_shell.h  main.c  output.c  output.h  renderer.c  renderer.h
